--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/0.qborcw9t.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.H1tgefg6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C4zSyuV8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.oAHMqEKo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CR7oYycR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DUnEXJsc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C8bCi1OR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.eFy2JhsH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.Dm5KZzhD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/template.DlPZK4b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bg9kRutz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DXPo2UpP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DBHCwF8V.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C-SKGf0w.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.tOnIuKnN.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.RBcn971s.js">
 	</head>
@@ -23,8 +23,9 @@
 			
 			<script>
 				{
-					__sveltekit_13o3t31 = {
-						base: new URL(".", location).pathname.slice(0, -1)
+					__sveltekit_17p9ej5 = {
+						base: new URL(".", location).pathname.slice(0, -1),
+						assets: "/project2"
 					};
 
 					const element = document.currentScript.parentElement;
@@ -32,8 +33,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.H1tgefg6.js"),
-						import("./_app/immutable/entry/app.C8bCi1OR.js")
+						import("./_app/immutable/entry/start.oAHMqEKo.js"),
+						import("./_app/immutable/entry/app.eFy2JhsH.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
