--- a/home.html
+++ b/home.html
@@ -5,25 +5,25 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.qborcw9t.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.oAHMqEKo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CR7oYycR.js">
+		<link href="./_app/immutable/assets/0.DFls30UU.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BU3_MKW7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D42cTzot.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DUnEXJsc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.eFy2JhsH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CiI8KRgw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.Dm5KZzhD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/template.DlPZK4b4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bg9kRutz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DXPo2UpP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C-SKGf0w.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DaRTdTRr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.tOnIuKnN.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.BiWNgXwv.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><main><header class="svelte-gl0dbq"><h1 class="title svelte-gl0dbq">World Peas</h1> <nav class="tabs svelte-gl0dbq"><a class="tab svelte-gl0dbq" href="/home" aria-label="home">Home</a> <a class="tab svelte-gl0dbq" href="/shop" aria-label="shop">Shop</a> <a class="tab svelte-gl0dbq" href="/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-gl0dbq" aria-label="basket">🛒</button></header> <!----><!----><!---->home<!----><!----></main> <footer class="svelte-gl0dbq">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+		<div style="display: contents"><!--[--><!--[--><!----><main><header class="svelte-1hleq82"><h1 class="title svelte-1hleq82">World Peas</h1> <nav class="tabs svelte-1hleq82"><a class="tab svelte-1hleq82" href="/project2/home" aria-label="home">Home</a> <a class="tab svelte-1hleq82" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-1hleq82" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-1hleq82" aria-label="basket"></button></header> <!----><!----><!---->home<!----><!----></main> <footer class="svelte-1hleq82">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_17p9ej5 = {
+					__sveltekit_1puevh3 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -33,8 +33,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.oAHMqEKo.js"),
-						import("./_app/immutable/entry/app.eFy2JhsH.js")
+						import("./_app/immutable/entry/start.BU3_MKW7.js"),
+						import("./_app/immutable/entry/app.CiI8KRgw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
