--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
+<!-- src/routes/+layout.svelte -->
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		
-		<link href="./_app/immutable/assets/0.DFls30UU.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BU3_MKW7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D42cTzot.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DUnEXJsc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CiI8KRgw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/store.Dm5KZzhD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/template.DlPZK4b4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DXPo2UpP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DaRTdTRr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.tOnIuKnN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.RBcn971s.js">
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents"><!--[--><!--[--><!----><main><header class="svelte-1hleq82"><h1 class="title svelte-1hleq82">World Peas</h1> <nav class="tabs svelte-1hleq82"><a class="tab svelte-1hleq82" href="/project2/home" aria-label="home">Home</a> <a class="tab svelte-1hleq82" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-1hleq82" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-1hleq82" aria-label="basket"></button></header> <!----><!----><!----><!----></main> <footer class="svelte-1hleq82">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="./favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        
+		<link href="./_app/immutable/assets/0.BgF2v-Zf.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.DqwWw3vZ.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BAq-rW7x.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BvUn7VTD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Dr1nGyLz.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DlwFzzQp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/store.18XCMxdK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.9yZkVq5e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D9pBWCDQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/props.BsL2VFR5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/this.QrBchFNN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CqFF57YV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BhnMmP7S.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-mjs.D_h5OYtw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.Dy7ld62C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DC3z2m6j.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C-5ujbdM.js">
+        <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+    </head>
+    <body data-sveltekit-preload-data="hover">
+        <div style="display: contents"><!--[--><!--[--><!----><main><header class="svelte-18vf2vn"><h1 class="title svelte-18vf2vn">World Peas</h1> <nav class="tabs svelte-18vf2vn"><a class="tab svelte-18vf2vn" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-18vf2vn" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-18vf2vn" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-18vf2vn" aria-label="basket"><svg xmlns="http://www.w3.org/2000/svg" fill="none" color="currentColor" style="width: 16px; height: 16px;" class="shrink-0 w-5 h-5" aria-label="cart outline" viewBox="0 0 24 24"><!--[!--><!--]--><!--[!--><!--]--><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"></path></svg><!----> <span class="svelte-18vf2vn">My Cart</span></button></header> <!----><!----><main class="svelte-xp7jdq"><h1 class="svelte-xp7jdq">Welcome!</h1> <p class="svelte-xp7jdq">We’re <span class="italic svelte-xp7jdq">farmers</span>, <span class="italic svelte-xp7jdq">purveyors</span>, and <span class="italic svelte-xp7jdq">eaters</span> of organically grown food.</p> <button class="shop-button svelte-xp7jdq">Browse our shop</button></main><!----><!----></main> <footer class="svelte-18vf2vn">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1puevh3 = {
+					__sveltekit_1gjjnox = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -33,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BU3_MKW7.js"),
-						import("./_app/immutable/entry/app.CiI8KRgw.js")
+						import("./_app/immutable/entry/start.BAq-rW7x.js"),
+						import("./_app/immutable/entry/app.DlwFzzQp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
@@ -46,5 +53,5 @@
 				}
 			</script>
 		</div>
-	</body>
+    </body>
 </html>
