--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,18 @@
         <link rel="icon" href="./favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
-		<link href="./_app/immutable/assets/0.BgF2v-Zf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BAq-rW7x.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BvUn7VTD.js">
+		<link href="./_app/immutable/assets/0.Db7R1524.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.RUBDHfRU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.COXDgDpy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Dr1nGyLz.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DlwFzzQp.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ulzBI8it.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.18XCMxdK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.9yZkVq5e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D9pBWCDQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.BsL2VFR5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/this.QrBchFNN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CqFF57YV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BhnMmP7S.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DCD7dsjU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-mjs.D_h5OYtw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.Dy7ld62C.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DC3z2m6j.js">
@@ -26,11 +26,11 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><main><header class="svelte-18vf2vn"><h1 class="title svelte-18vf2vn">World Peas</h1> <nav class="tabs svelte-18vf2vn"><a class="tab svelte-18vf2vn" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-18vf2vn" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-18vf2vn" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-18vf2vn" aria-label="basket"><svg xmlns="http://www.w3.org/2000/svg" fill="none" color="currentColor" style="width: 16px; height: 16px;" class="shrink-0 w-5 h-5" aria-label="cart outline" viewBox="0 0 24 24"><!--[!--><!--]--><!--[!--><!--]--><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"></path></svg><!----> <span class="svelte-18vf2vn">My Cart</span></button></header> <!----><!----><div class="min-h-screen flex flex-col items-center justify-start bg-white"><div class="w-full max-w-4xl p-8"><h1 class="text-5xl font-bold mb-4 text-center">Contact Us</h1> <hr class="border-t-2 border-green-700 mb-8"> <div class="flex flex-col md:flex-row"><div class="md:w-1/2 mb-8 md:mb-0 flex flex-col items-start"><div class="mb-6"><h2 class="text-2xl font-bold mb-2">Address</h2> <p>East Tapinac, Olongapo, Philippines</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Phone</h2> <p>Mobile: 09054718434</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Email</h2> <p>sustainablers@gordoncollege.edu.ph</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Working Time</h2> <p>Monday-Saturday: 6:00 - 17:00</p></div></div> <div class="md:w-1/2 md:pl-8 flex flex-col items-center"><form class="space-y-4 w-full"><div><label class="block text-gray-700">Your name</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc" value=""></div> <div><label class="block text-gray-700">Email address</label> <input type="email" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc@def.com" value=""></div> <div><label class="block text-gray-700">Subject</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="This is optional" value=""></div> <div><label class="block text-gray-700">Message</label> <textarea class="w-full p-2 border border-gray-300 rounded" placeholder="Hi! I'd like to ask about"></textarea></div> <div><button type="submit" class="w-full p-2 bg-green-700 text-white rounded">Submit</button></div></form></div></div></div></div><!----><!----></main> <footer class="svelte-18vf2vn">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-ekm435"><header class="svelte-ekm435"><h1 class="title svelte-ekm435">World Peas</h1> <nav class="tabs svelte-ekm435"><a class="tab svelte-ekm435" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-ekm435" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-ekm435" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-ekm435" aria-label="basket"><svg xmlns="http://www.w3.org/2000/svg" fill="none" color="currentColor" style="width: 16px; height: 16px;" class="shrink-0 w-5 h-5" aria-label="cart outline" viewBox="0 0 24 24"><!--[!--><!--]--><!--[!--><!--]--><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"></path></svg><!----> <span class="svelte-ekm435">My Cart</span></button></header> <!----><!----><div class="min-h-screen flex flex-col items-center justify-start bg-white"><div class="w-full max-w-4xl p-8"><h1 class="text-5xl font-bold mb-4 text-center">Contact Us</h1> <hr class="border-t-2 border-green-700 mb-8"> <div class="flex flex-col md:flex-row"><div class="md:w-1/2 mb-8 md:mb-0 flex flex-col items-start"><div class="mb-6"><h2 class="text-2xl font-bold mb-2">Address</h2> <p>East Tapinac, Olongapo, Philippines</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Phone</h2> <p>Mobile: 09054718434</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Email</h2> <p>sustainablers@gordoncollege.edu.ph</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Working Time</h2> <p>Monday-Saturday: 6:00 - 17:00</p></div></div> <div class="md:w-1/2 md:pl-8 flex flex-col items-center"><form class="space-y-4 w-full"><div><label class="block text-gray-700">Your name</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc" value=""></div> <div><label class="block text-gray-700">Email address</label> <input type="email" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc@def.com" value=""></div> <div><label class="block text-gray-700">Subject</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="This is optional" value=""></div> <div><label class="block text-gray-700">Message</label> <textarea class="w-full p-2 border border-gray-300 rounded" placeholder="Hi! I'd like to ask about"></textarea></div> <div><button type="submit" class="w-full p-2 bg-green-700 text-white rounded">Submit</button></div></form></div></div></div></div><!----><!----></main> <footer class="svelte-ekm435">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1gjjnox = {
+					__sveltekit_1l3wa0p = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BAq-rW7x.js"),
-						import("./_app/immutable/entry/app.DlwFzzQp.js")
+						import("./_app/immutable/entry/start.RUBDHfRU.js"),
+						import("./_app/immutable/entry/app.ulzBI8it.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
