--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
         
 		<link href="./_app/immutable/assets/0.Db7R1524.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.DqwWw3vZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.RUBDHfRU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.COXDgDpy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CtAIMXIY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.x0PIfoGv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Dr1nGyLz.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ulzBI8it.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B1b9oUYe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.18XCMxdK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.9yZkVq5e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D9pBWCDQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.BsL2VFR5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/this.QrBchFNN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CqFF57YV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DCD7dsjU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B0I1MI7x.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-mjs.D_h5OYtw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.Dy7ld62C.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DC3z2m6j.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CHKhk7z5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CwxmhuRF.js">
         <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-ekm435"><header class="svelte-ekm435"><h1 class="title svelte-ekm435">World Peas</h1> <nav class="tabs svelte-ekm435"><a class="tab svelte-ekm435" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-ekm435" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-ekm435" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-ekm435" aria-label="basket"><svg xmlns="http://www.w3.org/2000/svg" fill="none" color="currentColor" style="width: 16px; height: 16px;" class="shrink-0 w-5 h-5" aria-label="cart outline" viewBox="0 0 24 24"><!--[!--><!--]--><!--[!--><!--]--><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"></path></svg><!----> <span class="svelte-ekm435">My Cart</span></button></header> <!----><!----><main class="svelte-xp7jdq"><h1 class="svelte-xp7jdq">Welcome!</h1> <p class="svelte-xp7jdq">We’re <span class="italic svelte-xp7jdq">farmers</span>, <span class="italic svelte-xp7jdq">purveyors</span>, and <span class="italic svelte-xp7jdq">eaters</span> of organically grown food.</p> <button class="shop-button svelte-xp7jdq">Browse our shop</button></main><!----><!----></main> <footer class="svelte-ekm435">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-ekm435"><header class="svelte-ekm435"><h1 class="title svelte-ekm435">World Peas</h1> <nav class="tabs svelte-ekm435"><a class="tab svelte-ekm435" href="/project2/" aria-label=" ">Home</a> <a class="tab svelte-ekm435" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-ekm435" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-ekm435" aria-label="basket"><svg xmlns="http://www.w3.org/2000/svg" fill="none" color="currentColor" style="width: 16px; height: 16px;" class="shrink-0 w-5 h-5" aria-label="cart outline" viewBox="0 0 24 24"><!--[!--><!--]--><!--[!--><!--]--><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"></path></svg><!----> <span class="svelte-ekm435">My Cart</span></button></header> <!----><!----><main class="svelte-xp7jdq"><h1 class="svelte-xp7jdq">Welcome!</h1> <p class="svelte-xp7jdq">We’re <span class="italic svelte-xp7jdq">farmers</span>, <span class="italic svelte-xp7jdq">purveyors</span>, and <span class="italic svelte-xp7jdq">eaters</span> of organically grown food.</p> <button class="shop-button svelte-xp7jdq">Browse our shop</button></main><!----><!----></main> <footer class="svelte-ekm435">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1l3wa0p = {
+					__sveltekit_qemw8t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.RUBDHfRU.js"),
-						import("./_app/immutable/entry/app.ulzBI8it.js")
+						import("./_app/immutable/entry/start.CtAIMXIY.js"),
+						import("./_app/immutable/entry/app.B1b9oUYe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
