--- a/index.html
+++ b/index.html
@@ -6,31 +6,30 @@
         <link rel="icon" href="./favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
-		<link href="./_app/immutable/assets/0.Db7R1524.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.DqwWw3vZ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CtAIMXIY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.x0PIfoGv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Dr1nGyLz.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B1b9oUYe.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/store.18XCMxdK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.9yZkVq5e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D9pBWCDQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/props.BsL2VFR5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/this.QrBchFNN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CqFF57YV.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B0I1MI7x.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-mjs.D_h5OYtw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.Dy7ld62C.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DC3z2m6j.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CwxmhuRF.js">
-        <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.QewCql2K.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/app.Du0GMSGn.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.NmHFT1ZE.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D9PkAPjn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTBF91yP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.NBAfo0iF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BmiKDn9V.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/store.Cx1hATE_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C05luBB5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DxcAWsds.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/this.DPOLloYK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/props.BDvw9qd2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BtIDxGEO.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DVgpbEKX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/slot.ZQRvvWia.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.DKOCfVKU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.D4UaCqsK.js">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-ekm435"><header class="svelte-ekm435"><h1 class="title svelte-ekm435">World Peas</h1> <nav class="tabs svelte-ekm435"><a class="tab svelte-ekm435" href="/project2/" aria-label=" ">Home</a> <a class="tab svelte-ekm435" href="/project2/shop" aria-label="shop">Shop</a> <a class="tab svelte-ekm435" href="/project2/contact" aria-label="contact">Contact</a></nav> <button class="basket-button svelte-ekm435" aria-label="basket"><svg xmlns="http://www.w3.org/2000/svg" fill="none" color="currentColor" style="width: 16px; height: 16px;" class="shrink-0 w-5 h-5" aria-label="cart outline" viewBox="0 0 24 24"><!--[!--><!--]--><!--[!--><!--]--><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"></path></svg><!----> <span class="svelte-ekm435">My Cart</span></button></header> <!----><!----><main class="svelte-xp7jdq"><h1 class="svelte-xp7jdq">Welcome!</h1> <p class="svelte-xp7jdq">We’re <span class="italic svelte-xp7jdq">farmers</span>, <span class="italic svelte-xp7jdq">purveyors</span>, and <span class="italic svelte-xp7jdq">eaters</span> of organically grown food.</p> <button class="shop-button svelte-xp7jdq">Browse our shop</button></main><!----><!----></main> <footer class="svelte-ekm435">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="/project2/contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><main class="svelte-18zi6jb"><h1 class="svelte-18zi6jb">Welcome!</h1> <p class="svelte-18zi6jb">We’re <span class="italic svelte-18zi6jb">farmers</span>, <span class="italic svelte-18zi6jb">purveyors</span>, and <span class="italic svelte-18zi6jb">eaters</span> of organically grown food.</p> <button class="shop-button svelte-18zi6jb">Browse our shop</button></main><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_qemw8t = {
+					__sveltekit_164ujdh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -40,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CtAIMXIY.js"),
-						import("./_app/immutable/entry/app.B1b9oUYe.js")
+						import("./_app/immutable/entry/start.D9PkAPjn.js"),
+						import("./_app/immutable/entry/app.BmiKDn9V.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
